[package]
name = "dash7_alp"
version = "0.1.0"
authors = ["Igor Valet <igor_valet@hotmail.com>"]
edition = "2018"
description = "Implementation of a DASH7 ALP protocol codec."
readme = "README.md"
repository = "https://github.com/Stratus51/rust_dash7_alp"
license = "MIT"
keywords = ["dash7", "alp", "parser", "protocol"]
categories = ["encoding", "parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
hex-literal = "0"

[features]
default = ["decode_all_actions", "decode_all_queries"]
decode_all_actions = ["decode_nop", "decode_action_query", "decode_read_file_data", "decode_read_file_properties", "decode_status", "decode_write_file_data"]
decode_nop = ["decode_action"]
decode_read_file_data = ["decode_action"]
decode_read_file_properties = ["decode_action"]
decode_write_file_data = ["decode_action"]
decode_action_query = ["decode_action"]
decode_status = ["decode_action"]

decode_all_queries = ["decode_query_compare_with_value", "decode_query_compare_with_range"]
decode_query_compare_with_value = []
decode_query_compare_with_range = []

decode_action = []
alloc = []

repr_c = []
# TODO The crate is clearly not packed compatible currently because of heavy misaligned pointer use.
# Check if that is fixeable or not.
# packed = []
