[package]
name = "dash7_alp"
version = "0.1.0"
authors = ["Igor Valet <igor_valet@hotmail.com>"]
edition = "2018"
description = "Implementation of a DASH7 ALP protocol codec."
readme = "README.md"
repository = "https://github.com/Stratus51/rust_dash7_alp"
license = "MIT"
keywords = ["dash7", "alp", "parser", "protocol"]
categories = ["encoding", "parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
hex-literal = "0"

[features]
default = ["decode_all_actions", "decode_all_queries"]
decode_all_actions = ["decode_nop", "decode_action_query", "decode_read_file_data", "decode_read_file_properties", "decode_status", "decode_write_file_data"]
decode_nop = ["decode_action", "nop"]
decode_read_file_data = ["decode_action", "read_file_data"]
decode_read_file_properties = ["decode_action", "read_file_properties"]
decode_write_file_data = ["decode_action", "write_file_data"]
decode_action_query = ["decode_action", "action_query", "decode_query"]
decode_status = ["decode_action", "status"]

all_actions = ["nop", "read_file_data", "read_file_properties", "write_file_data", "action_query", "status"]

nop = []
read_file_data = []
read_file_properties = []
write_file_data = []
action_query = ["query"]
status = []

decode_all_queries = ["decode_query_compare_with_value", "decode_query_compare_with_range", "all_queries"]
decode_query_compare_with_value = ["query_compare_with_value"]
decode_query_compare_with_range = ["query_compare_with_range"]
decode_query = ["query"]

all_queries = ["query_compare_with_value", "query_compare_with_range"]
query_compare_with_value = ["query"]
query_compare_with_range = ["query"]
query = []

decode_action = []
alloc = []

repr_c = []
# TODO The crate is clearly not packed compatible currently because of heavy misaligned pointer use.
# Check if that is fixeable or not.
# packed = []
